--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ body {
     background-color: #F2F3F8;
     font-family: 'Open Sans', sans-serif;
 }
+@media (max-width: 576px) {
+    html {
+      font-size: 14px;
+    }
+  }
 .container {
     display: flex;
     flex-direction: column;
