--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -141,7 +141,71 @@
   }
 
   .contact {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    #my-form {
+      margin-top: 2rem;
+
+      .form-group {
+        margin-bottom: 1rem;
+
+        label {
+          font-weight: 400;
+          display: block;
+          width: 7rem;
+          color: #282738;
+          margin-bottom: 0.5rem;
+        }
+
+        .form-control {
+          width: 100%;
+          max-width: 35rem;
+          border-radius: 5px;
+          background: #fafafa;
+          color: #666;
+          border: 1px solid #b5b9c8;
+          padding: 0 1rem;
+          font-weight: 500;
+          box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.08);
+          line-height: 3rem;
+
+          &::placeholder {
+            font-weight: 300;
+            color: #aaa;
+          }
+
+          &:focus {
+            border: 1px solid #bbb;
+            outline: none;
+            background-color: #f3f3f3;
+          }
+        }
+      }
+      $btn-bg-color: #52508d;
+      button {
+        border: none;
+        padding: 0.75rem 2rem;
+        border-radius: 5px;
+        background: $btn-bg-color;
+        font-weight: 400;
+        font-size: 1.125rem;
+        color: #eee;
+        text-align: center;
+        vertical-align: middle;
+        user-select: none;
+        cursor: pointer;
+        &:hover {
+          background-color: lighten($btn-bg-color, 2%);
+        }
+        &:active {
+          background-color: darken($btn-bg-color, 4%);
+        }
+        &:focus {
+          outline: none;
+        }
+      }
+
+      #my-form-status {
+        margin-top: 1rem;
+      }
+    }
   }
 }
