--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,6 +27,7 @@ body {
   @media (max-width: 1200px) {
     background-position: right -300px top -60px, left -400px top 230px;
   }
+  margin-top: 6.25rem;
 }
 .container {
   margin: 0 auto;
