--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -25,8 +25,17 @@
     border-radius: 6px;
     padding: 2rem;
     display: flex;
+
     align-items: center;
-    transition: all 0.15s ease-in-out;
+    transition: all 0.4s ease-in-out;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      img {
+        margin-bottom: 1rem;
+      }
+    }
+
     &:hover {
       transform: scale(1.02);
       box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.11);
@@ -38,11 +47,27 @@
       height: auto;
       max-height: 15rem;
       margin-right: 2rem;
+      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+      border-radius: 5px;
+      width: 400px;
     }
 
     .info {
+      width: 100%;
       p {
         color: #72798d;
+      }
+      .tags {
+        margin-top: 0.5rem;
+        span {
+          display: inline-block;
+          background-color: #c4cadb;
+          color: #2f364b;
+          border-radius: 5px;
+          padding: 0 5px;
+          margin-right: 5px;
+          font-size: 0.8rem;
+        }
       }
       .name {
         display: flex;
